--- a/hww2.html
+++ b/hww2.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>2017名人見面會報名表</title>
 </head>
 <body bgcolor="#DEFFFF">
@@ -8,7 +9,7 @@
 	<center><font face="微軟正黑體"  size="4">又到了一年一度的握手會時間了<br>我們要來票選這次見面會要邀請誰來<br>歡迎大家留下自己的資料<br>並投票選出想要的明星<br>主辦單位將選出票數最高的明星與大家見面<br>人數有限請儘速報名喔<br>(會以email通知有無選上)<br> <br></font></center>
 
 <font face="微軟正黑體"><center>
-	<form action="hww4.php" method="post">
+	<form action="w8hw.php" method="post">
 		姓名：<input type="text" name="uname"><br>
 		email：<input type="email" name="email"><br>
 		電話：<input type="tel" name="tel"><br>
